--- a/modules/seminar/format-competition.tex
+++ b/modules/seminar/format-competition.tex
@@ -11,6 +11,13 @@
     
 \fancypagestyle{first-(* competition.id *)}{%
     \pagestyle{first}
+    \fancyhead[L]{    
+        \begin{minipage}{0.15\textwidth}
+            \flushleft
+            \includegraphics[height = 20mm]{core/logo/trojsten/large.pdf}\\[0pt]
+            \vspace{16pt}
+        \end{minipage}
+    }
     \fancyhead[C]{
         \begin{minipage}{0.7\textwidth}
             \centering
