Make several xparse DocumentCommand calls Expandable.

--- a/core/core.tex
+++ b/core/core.tex
@@ -162,5 +162,5 @@
 \char_set_catcode_end_line:n{`\^^M}
 \ExplSyntaxOff
 
-\NewDocumentCommand{\rootDirectory}{}{input}
-\NewDocumentCommand{\problemDirectory}{}{<undefined>}
+\NewExpandableDocumentCommand{\rootDirectory}{}{input}
+\NewExpandableDocumentCommand{\problemDirectory}{}{<undefined>}
