--- a/modules/naboj/templates/booklet.tex
+++ b/modules/naboj/templates/booklet.tex
@@ -31,6 +31,7 @@
         \protectedInput{\problemDirectory/solution.tex}%
     (@ endfor @)
 
+    \newpage
     \vspace*{15mm}
     \section{(* i18n.section.answers *)}
     \pagestyle{answers}
