Change siunitx per-mode default to symbol

--- a/modules/naboj/format.tex
+++ b/modules/naboj/format.tex
@@ -82,3 +82,6 @@
 
 \captionsetup[table]{name=(* i18n.caption.table *)}
 \captionsetup[figure]{name=(* i18n.caption.figure *)}
+\sisetup{
+    per-mode        = symbol,
+}
