--- a/modules/seminar/styles/UFO/templates/rules.tex
+++ b/modules/seminar/styles/UFO/templates/rules.tex
@@ -14,9 +14,9 @@
         môžeš svoje riešenie oskenovať a~uložiť každú takto naskenovanú úlohu do jedného \textbf{samostatného} \texttt{pdf} súboru.
         Viac informácií k~riešeniam nájdeš na stránke \URL{http://ufo.fks.sk/pravidla}.
 
-    \item[$\skull$] Úlohy rieš samostatne! Za odpisovanie strhávame body a~sme agresívni. 
+    \item Úlohy rieš samostatne! Za odpisovanie strhávame body a~sme agresívni. 
 
-    \item[$\skull$] Príklady posielaj načas! Rozhoduje \textbf{termín odoslania} riešení. Riešenia ti zoberieme
+    \item Príklad posielaj načas! Rozhoduje \textbf{termín odoslania} riešení. Riešenia ti zoberieme
         aj deň po termíne, ale započítaných ti bude len \SI{75}{\percent} získaných bodov. Výnimočné prípady riešime individuálne.
 \end{itemize}
 
