--- a/modules/naboj/templates/cover.tex
+++ b/modules/naboj/templates/cover.tex
@@ -2,7 +2,7 @@
 
 \input{core/core.tex}
 \input{core/format.tex}
-\input{modules/(* module.id *)/styles/(* competition.id *)/format.tex}
+\input{input/(* module.id *)/(* competition.id *)/format-specific.tex}
 \input{input/(* module.id *)/(* competition.id *)/(* volume.id *)/languages/(* language.id *)/format.tex}
 
 \newgeometry{
@@ -20,12 +20,12 @@
     \begin{center}
         \null
         \vfill
-        \includegraphics[keepaspectratio = true, height = 40mm]{modules/(* module.id *)/styles/(* competition.id *)/logo/barcode.pdf}
+        \includegraphics[keepaspectratio = true, height = 40mm]{input/(* module.id *)/(* competition.id *)/barcode.pdf}
     \end{center}
     \newpage        
     \begin{center}
         \vspace*{20mm}
-        \includegraphics[keepaspectratio = true, height = 80mm]{modules/(* module.id *)/styles/(* competition.id *)/logo/logo.pdf}
+        \includegraphics[keepaspectratio = true, height = 80mm]{input/(* module.id *)/(* competition.id *)/logo.pdf}
         \vfill
         \fontsize{60}{25}\selectfont
         (* volume.number + competition.founded - 1 *)
