--- a/modules/naboj/templates/booklet-intro.tex
+++ b/modules/naboj/templates/booklet-intro.tex
@@ -2,7 +2,7 @@
 
 \input{core/core.tex}
 \input{core/format.tex}
-\input{modules/(* module.id *)/styles/(* competition.id *)/format.tex}
+\input{input/(* module.id *)/(* competition.id *)/format-specific.tex}
 \input{input/(* module.id *)/(* competition.id *)/(* volume.id *)/languages/(* language.id *)/format.tex}
 
 \newcounter{volume}
