--- a/modules/scholar/templates/problems.tex
+++ b/modules/scholar/templates/problems.tex
@@ -2,6 +2,7 @@
 
 \input{core/core.tex}
 \input{core/format.tex}
+\input{modules/(* module.id *)/styles/(* competition.id *)/settings.tex}
 
 \input{input/(* module.id *)/format-root.tex}
 \input{input/(* module.id *)/(* competition.id *)/format-competition.tex}
