--- a/modules/naboj/templates/answers-mod5.tex
+++ b/modules/naboj/templates/answers-mod5.tex
@@ -1,14 +1,6 @@
-\documentclass[12pt, twoside]{article}
+(@ extends 'base-languages.tex' @)
 
-\input{core/core.tex}
-\input{core/format.tex}
-\input{input/(* module.id *)/(* competition.id *)/format-specific.tex}
-\input{input/(* module.id *)/(* competition.id *)/(* volume.id *)/languages/(* language.id *)/format.tex}
-
-\newcounter{volume}
-\newcounter{problem}
-
-\begin{document}            
+(@ block content @)
     \pagestyle{main}
     \thispagestyle{first}
     \vspace*{19mm}
@@ -26,4 +18,4 @@
             \protectedInput{\problemDirectory/answer.tex}%
         (@ endfor @)
     (@ endfor @)
-\end{document}
+(@ endblock @)    
