--- a/modules/naboj/templates/booklet.tex
+++ b/modules/naboj/templates/booklet.tex
@@ -1,14 +1,11 @@
-\documentclass[12pt, twoside]{article}
+(@ extends 'base-languages.tex' @)
 
-\input{core/core.tex}
-\input{core/format.tex}
-\input{input/(* module.id *)/(* competition.id *)/format-specific.tex}
-\input{input/(* module.id *)/(* competition.id *)/(* volume.id *)/languages/(* language.id *)/format.tex}
+(@ block content @)
+    \thispagestyle{first}
+    \vspace*{15mm}
+    \input{input/(* module.id *)/(* competition.id *)/(* volume.id *)/languages/(* language.id *)/intro.tex}
+    \newpage
 
-\newcounter{volume}
-\newcounter{problem}
- 
-\begin{document}
     \pagestyle{main}
     \section{(* i18n.section.problems *)}
     \pagestyle{problems}    
@@ -41,4 +38,4 @@
         \subsection{\texorpdfstring{(* problem.number *)}{(* problem.number *). (* problem.id *)}}%
         \protectedInput{\problemDirectory/answer.tex}%
     (@ endfor @)
-\end{document}
+(@ endblock @)
