--- a/modules/naboj/templates/constants.tex
+++ b/modules/naboj/templates/constants.tex
@@ -1,11 +1,6 @@
-\documentclass[12pt, twoside]{article}
+(@ extends 'base-languages.tex' @)
 
-\input{core/core.tex}
-\input{core/format.tex}
-\input{input/(* module.id *)/(* competition.id *)/format-specific.tex}
-\input{input/(* module.id *)/(* competition.id *)/(* volume.id *)/languages/(* language.id *)/format.tex}
-
-\begin{document}
+(@ block content @)
     \pagestyle{constants}
     \renewcommand{\arraystretch}{1.3}
     \section{(* i18n.constants.title *)}
@@ -22,4 +17,4 @@
             \bottomrule
         \end{tabular}
     \end{figure}
-\end{document}
+(@ endblock @)
