--- a/modules/naboj/templates/instructions.tex
+++ b/modules/naboj/templates/instructions.tex
@@ -1,12 +1,7 @@
-\documentclass[12pt, twoside]{article}
+(@ extends 'base-languages.tex' @)
 
-\input{core/core.tex}
-\input{core/format.tex}
-\input{input/(* module.id *)/(* competition.id *)/format-specific.tex}
-\input{input/(* module.id *)/(* competition.id *)/(* volume.id *)/languages/(* language.id *)/format.tex}
-
-\begin{document}
+(@ block content @)
     \pagestyle{instructions}
     \section{(* i18n.instructions.title *)}
     \input{input/(* module.id *)/(* competition.id *)/(* volume.id *)/languages/(* language.id *)/instructions-text.tex}
-\end{document}
+(@ endblock @)
