--- a/modules/seminar/templates/semester.tex
+++ b/modules/seminar/templates/semester.tex
@@ -1,20 +1,6 @@
-\documentclass[12pt, twoside]{article}
-
-\input{core/core.tex}
-\input{core/format.tex}
-\input{modules/(* module.id *)/styles/(* competition.id *)/settings.tex}
-
-\input{input/(* module.id *)/format-root.tex}
-\input{input/(* module.id *)/(* competition.id *)/format-competition.tex}
-\input{input/(* module.id *)/(* competition.id *)/(* volume.id *)/format-volume.tex}
-\input{input/(* module.id *)/(* competition.id *)/(* volume.id *)/(* semester.id *)/format-semester.tex}
-
-\newcounter{volume}
-\newcounter{semester}
-\newcounter{round}
-\newcounter{problem}
+(@ extends 'base.tex' @)
  
-\begin{document}
+(@ block content @)
     \pagestyle{main-(* competition.id *)}
     \thispagestyle{first-(* competition.id *)-(* volume.id *)-(* semester.id *)}
     \vspace*{15mm}
@@ -53,4 +39,4 @@
         \protectedInput{\problemDirectory/problem.tex}%
         (@ endfor @)
     (@ endfor @)
-\end{document}
+(@ endblock content @)
