--- a/modules/naboj/templates/base.tex
+++ b/modules/naboj/templates/base.tex
@@ -1,5 +1,9 @@
 \documentclass[12pt, twoside]{article}
 
+\input{core/core.tex}
+\input{core/format.tex}
+\input{input/(* module.id *)/(* competition.id *)/format-specific.tex}
+
 (@ include 'inputs.tex' @)
 (@ block specific @)(@ endblock @)
 
