--- a/modules/seminar/templates/base.tex
+++ b/modules/seminar/templates/base.tex
@@ -4,7 +4,7 @@
 \input{core/format.tex}
 
 \input{input/(* module.id *)/format-root.tex}
-\input{input/(* module.id *)/(* competition.id *)/format-override.tex}
+\input{input/(* module.id *)/(* competition.id *)/static/format-override.tex}
 \input{input/(* module.id *)/(* competition.id *)/format-competition.tex}
 \input{input/(* module.id *)/(* competition.id *)/(* volume.id *)/format-volume.tex}
 \input{input/(* module.id *)/(* competition.id *)/(* volume.id *)/(* semester.id *)/format-semester.tex}
