--- a/modules/naboj/templates/base.tex
+++ b/modules/naboj/templates/base.tex
@@ -2,9 +2,8 @@
 
 \input{core/core.tex}
 \input{core/format.tex}
-\input{input/(* module.id *)/(* competition.id *)/format-specific.tex}
+\input{input/(* module.id *)/(* competition.id *)/static/format-override.tex}
 
-(@ include 'inputs.tex' @)
 (@ block specific @)(@ endblock @)
 
 \newcounter{volume}
