--- a/modules/naboj/templates/cover.tex
+++ b/modules/naboj/templates/cover.tex
@@ -16,12 +16,12 @@
     \begin{center}
         \null
         \vfill
-        \includegraphics[keepaspectratio = true, height = 40mm]{input/(* module.id *)/(* competition.id *)/barcode.pdf}
+        \includegraphics[keepaspectratio = true, height = 40mm]{input/(* module.id *)/(* competition.id *)/static/logo/barcode.pdf}
     \end{center}
     \newpage        
     \begin{center}
         \vspace*{20mm}
-        \includegraphics[keepaspectratio = true, height = 80mm]{input/(* module.id *)/(* competition.id *)/logo.pdf}
+        \includegraphics[keepaspectratio = true, height = 80mm]{input/(* module.id *)/(* competition.id *)/static/logo/logo.pdf}
         \vfill
         \fontsize{60}{25}\selectfont
         (* volume.number + competition.founded - 1 *)
