--- a/core/tex/dgs.cls
+++ b/core/tex/dgs.cls
@@ -1,5 +1,7 @@
-\NeedTeXFormat(LaTeX2e}
-\ProvidesClass{dgs}[DeGeŠ core class 2018-10-01]
+\NeedsTeXFormat{LaTeX2e}
+\ProvidesClass{dgs}[2018/10/02 DeGeŠ core class]
+
+\LoadClass[12pt, twoside]{article}
 
 \RequirePackage[
     paper                   = a4paper,
@@ -46,6 +48,35 @@
 \definecolor{colour-url}{RGB}{0, 137, 162}
 \definecolor{colour-link}{RGB}{0, 137, 162}
 
+\sisetup{
+    detect-all              = true,                         % chceme zachovávať formátovanie prostredia
+    separate-uncertainty    = true,                         % 7.2 ± 0.5
+    multi-part-units        = single,                       % 12.3 ± 0.2 kg, neopakovať "kg"
+    per-mode                = reciprocal,                   % `symbol` pre "m/s", `reciprocal` pre "ms^{-1}"
+    group-separator         = {\,},
+    group-minimum-digits    = 5,
+    inter-unit-product      = {\kern 0.05em},               % veľmi tenká medzera medzi jednotkami
+    exponent-product        = \times,                       % \times pre 5×10^7, \cdot pre 5.1O^7    
+    number-unit-product     = {\ },                         % medzera medzi číslom a jednotkou
+    output-decimal-marker   = {\text{,}},                   % v desatinných číslach chceme slovenskú čiarku
+    range-units             = single,
+    range-phrase            = {\text{ -- }},                % 5 -- 10 m/s
+    list-units              = single,                       %
+    list-final-separator    = {\ a\ },                      % 5, 7 a 10 m/s
+    retain-explicit-plus    = true,                         % zachovávame explicitné +
+}
+
+\RequirePackage[
+    colorlinks              = true,
+    linkcolor               = colour-link,                  % custom Trojsten link colour
+    urlcolor                = colour-url,                   % custom Trojsten URL link colour
+]{hyperref}
+
+\RequirePackage{polyglossia}                                % multi-language support
+\RequirePackage{xunicode}
+\setdefaultlanguage{slovak}
+
+\RequirePackage[nodisplayskipstretch]{setspace}
 
 % paragraph settings -- formatting paragraphs and list environments
 \linespread{1.0}
@@ -53,7 +84,6 @@
 \setlength{\parindent}{0cm}
 \setlength{\parskip}{6pt}
 
-\usepackage[nodisplayskipstretch]{setspace}
 \setstretch{1.0}
 
 \NewDocumentCommand{\setDisplaySkips}{}{%
@@ -71,7 +101,6 @@
 \setlength{\itemindent}{0pt}
 \setlength{\textfloatsep}{3mm}
 \setlength{\LTcapwidth}{0.8\textwidth}
-
 
 % Setup enumitem options for *description*, *enumerate* and *itemize*
 \setlist[description]{
@@ -98,3 +127,11 @@
 \renewcommand{\arraystretch}{1.0}
 \renewcommand{\headrulewidth}{0.4pt}
 \renewcommand{\footrulewidth}{0.4pt}
+
+
+\NewDocumentCommand{\rootDirectory}{}{input}
+\NewDocumentCommand{\activeDirectory}{}{<undefined>}
+
+\input{dgs/fonts.tex}
+\input{dgs/utilities.tex}
+\input{dgs/hacks.tex}
