--- a/modules/seminar/format-root.tex
+++ b/modules/seminar/format-root.tex
@@ -1,7 +1,7 @@
 % DeGeŠ style file
 % module: seminar
 
-\fancypagestyle{main}{
+\fancypagestyle{seminar-main}{
     \titleformat{\section}[hang]{\centering\LARGE}{}{0pt}{}
     \titleformat{\subsection}[hang]{\bfseries\large}{}{0pt}{}[]
     \titleformat{\subsubsection}[hang]{\bfseries}{}{0pt}{}[]
@@ -10,12 +10,12 @@
     \titlespacing{\subsubsection}{0pt}{8pt}{0pt}
 }
 
-\fancypagestyle{rules}{%
+\fancypagestyle{seminar-rules}{%
     \pagestyle{main}
     \fancyhead[LE,RO]{\textit{Pravidlá}}
 }
     
-\fancypagestyle{first}{%
+\fancypagestyle{seminar-first}{%
     \fancyhf{}
 }  
 
