--- a/modules/seminar/format-volume.tex
+++ b/modules/seminar/format-volume.tex
@@ -1,8 +1,8 @@
 % DeGeŠ style file
 % module: seminar
 
-\fancypagestyle{first-(* competition.id *)-(* volume.id *)}{%
-    \pagestyle{first-(* competition.id *)}
+\fancypagestyle{seminar-first-(* competition.id *)-(* volume.id *)}{%
+    \pagestyle{seminar-first-(* competition.id *)}
     \fancyhead[C]{
         \begin{minipage}{0.7\textwidth}
             \centering
@@ -15,6 +15,6 @@
     }           
 }  
 
-\fancypagestyle{main-(* competition.id *)-(* volume.id *)}{%
-    \pagestyle{main-(* competition.id *)}
+\fancypagestyle{seminar-main-(* competition.id *)-(* volume.id *)}{%
+    \pagestyle{seminar-main-(* competition.id *)}
 }
