--- a/modules/seminar/templates/base.tex
+++ b/modules/seminar/templates/base.tex
@@ -1,7 +1,4 @@
-\documentclass[12pt, twoside]{article}
-
-\input{core/core.tex}
-\input{core/format.tex}
+\documentclass[12pt, twoside]{dgs}
 
 \input{input/(* module.id *)/format-root.tex}
 \input{input/(* module.id *)/(* competition.id *)/static/format-override.tex}
