--- a/modules/seminar/format-semester.tex
+++ b/modules/seminar/format-semester.tex
@@ -1,10 +1,10 @@
 % DeGeŠ style file
 % module: seminar
 
-\fancypagestyle{first-(* competition.id *)-(* volume.id *)-(* semester.id *)}{%
-    \pagestyle{first-(* competition.id *)-(* volume.id *)}
+\fancypagestyle{seminar-first-(* competition.id *)-(* volume.id *)-(* semester.id *)}{%
+    \pagestyle{seminar-first-(* competition.id *)-(* volume.id *)}
 }  
 
-\fancypagestyle{main-(* competition.id *)-(* volume.id *)-(* semester.id *)}{%
-    \pagestyle{main-(* competition.id *)-(* volume.id *)}
+\fancypagestyle{seminar-main-(* competition.id *)-(* volume.id *)-(* semester.id *)}{%
+    \pagestyle{seminar-main-(* competition.id *)-(* volume.id *)}
 }
