--- a/modules/seminar/templates/semester.tex
+++ b/modules/seminar/templates/semester.tex
@@ -1,8 +1,8 @@
 (@ extends 'base.tex' @)
  
 (@ block content @)
-    \pagestyle{main-(* competition.id *)}
-    \thispagestyle{first-(* competition.id *)-(* volume.id *)-(* semester.id *)}
+    \pagestyle{seminar-main-(* competition.id *)}
+    \thispagestyle{seminar-first-(* competition.id *)-(* volume.id *)-(* semester.id *)}
     \vspace*{15mm}
     \input{input/(* module.id *)/(* competition.id *)/(* volume.id *)/(* semester.id *)/intro.tex}
     \newpage
