Tidied up fonts

--- a/core/tex/fonts.tex
+++ b/core/tex/fonts.tex
@@ -13,6 +13,7 @@
     Scale           = MatchLowercase,
     Ligatures       = TeX
 }
+
 \setallmainfonts[
     Path            = core/fonts/MinionPro/ ,
     Extension       = .otf ,
@@ -21,6 +22,7 @@
     ItalicFont      = *-i ,
     BoldItalicFont  = *-bi    
 ]{MinionPro}
+
 \setmathfont(Digits,Latin,Greek)[
     Path            = core/fonts/MinionPro/ ,
     Extension       = .otf ,
@@ -29,14 +31,25 @@
     ItalicFont      = *-i ,
     BoldItalicFont  = *-bi    
 ]{MinionPro}
+
 \setmonofont[
-    Path            = core/fonts/ ,
+    Path            = core/fonts/UbuntuMono/ ,
     Extension       = .ttf ,
     UprightFont     = *-r ,
     BoldFont        = *-b ,
     ItalicFont      = *-i ,
     BoldItalicFont  = *-bi    
-]{ubuntumono}
+]{UbuntuMono}
+
+%\setmonofont[
+%    Path            = core/fonts/SourceCodePro/ ,
+%    Extension       = .otf ,
+%    UprightFont     = *-regular ,
+%    BoldFont        = *-bold ,
+%    ItalicFont      = *-italic ,
+%    BoldItalicFont  = *-bolditalic
+%]{SourceCodePro}
+
 \setsansfont[
     Path            = core/fonts/ ,
     Extension       = .ttf ,
